# NLPTextAnalyzer

./: .gitignore  Dockerfile  README.md  app.py  db_src.py  docker-compose.yml  nlp.py  pyproject.toml  requirements.txt
dashboards/: dashboard.json
grafana/dashboards/: dashboards.json
grafana/provisioning/dashboards/: dashboard.yaml
grafana/provisioning/datasource/: datasource.yaml
grafana/provisioning/datasources/: datasources.yaml
provisioning/dashboards/: dashboard.yaml
src/: db_src.py
tests/: test_db.py
