[tool.poetry]
name = "nlptextanalyzer"
version = "0.1.0"
description = ""
authors = ["fatmaann <sol1222183@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
textblob = "^0.18.0.post0"
scikit-learn = "^1.5.2"
pymorphy2 = "^0.9.1"
nltk = "^3.9.1"
sqlalchemy = "^2.0.35"
bcrypt = "^4.2.0"
streamlit = "1.38.0"
psycopg2-binary = "^2.9.9"
streamlit-extras = "^0.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
